--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,16 +1,17 @@
 .sidebar {
     grid-area: Sidebar;
-    background-color: #b3b3b3;
+    background-color: #ffe86f;
     padding: 10px;
     font-size: 25px;
     height: 500px;
 }
 
 .item a {
-    color: #f5f5f5;
+    color: #373737;
     text-decoration: none;
 }
 
 .item a.activeLink {
-    color: #373737;
+    color: black;
+    text-shadow: black 0 0 2px;
 }
