--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,3 +7,17 @@
     width: 50px;
     margin-top: 5px;
 }
+
+.loginBlock {
+    float: right;
+}
+
+.loginBlock a {
+    text-decoration: none;
+    color: #373737;
+}
+
+.loginBlock a.activeLink {
+    color: black;
+    text-shadow: black 0 0 2px;
+}
