--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,10 +5,11 @@
 
 .header img {
     width: 50px;
-    margin-top: 5px;
+    margin-top: 4px;
 }
 
 .loginBlock {
+    margin: 15px;
     float: right;
 }
 
