--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -7,8 +7,15 @@
 }
 
 .item a {
-    color: #373737;
+    margin: 5px;
+    color: black;
     text-decoration: none;
+    width: 100%;
+}
+
+.item:hover {
+    background-color: #ffd023;
+    border-radius: 4px;
 }
 
 .item a.activeLink {
