More info in profile

--- a/src/components/Profile/Posts/Post/Post.module.css
+++ b/src/components/Profile/Posts/Post/Post.module.css
@@ -1,5 +1,10 @@
 .item {
+    padding: 4px;
     color: black;
+    margin-top: 5px;
+    border: #373737 2px solid;
+    border-radius: 6px;
+    display: table;
 }
 
 .item img {
