--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -9,6 +9,7 @@
 }
 
 .selectedPage {
+    background-color: #ffd023;
     color: black;
     text-shadow: black 0 0 2px;
     border: solid 1px black;
