--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -1,3 +1,9 @@
 .posts {
     padding: 10px;
 }
+.addPostButton {
+    width: 100px;
+    height: 25px;
+    border-radius: 5px;
+    user-select: none;
+}
