completed ProfileInfo, warnings fixed

--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -9,7 +9,7 @@
 }
 
 .selectedPage {
-    background-color: #ffd023;
+    background-color: #ffe86f;
     color: black;
     text-shadow: black 0 0 2px;
     border: solid 1px black;
