--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -8,7 +8,12 @@
     border-radius: 10px;
 }
 
-.nickName {
+.fullName {
     font-size: 30px;
     font-weight: bold;
+    display: inline;
+}
+
+.contact {
+    margin-left: 10px;
 }
