--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     display: grid;
 
-    grid-template-areas: "Header Header" "Sidebar Content";
+    grid-template-areas: 'Header Header' 'Sidebar Content';
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
