--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -2,6 +2,6 @@
     display: grid;
     grid-template-columns: 2fr 10fr;
     padding: 10px;
-    background-color: whitesmoke;
+    background-color: lightgray;
 }
 
