--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,6 +13,10 @@
     float: right;
 }
 
+.loginBlock button {
+    user-select: none;  
+}
+
 .loginBlock a {
     text-decoration: none;
     color: black;
@@ -20,5 +24,5 @@
 
 .loginBlock a.activeLink {
     color: black;
-    text-shadow: black 0 0 2px;
+    font-weight: bold;
 }
