--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -2,12 +2,17 @@
     grid-area: Sidebar;
     background-color: #ffe86f;
     padding: 10px;
-    font-size: 25px;
+    font-size: 23px;
     height: 450px;
 }
 
-.item a {
+.item {
     margin: 5px;
+    padding-left: 10px;
+}
+
+.item a {
+    /*margin: 5px;*/
     color: black;
     text-decoration: none;
     width: 100%;
@@ -20,5 +25,5 @@
 
 .item a.activeLink {
     color: black;
-    text-shadow: black 0 0 2px;
+    font-weight: bold;
 }
